[package]
name = "awesome-glib"
description = "Bunch of macros to make a life of gtk/glib user easier"
documentation = "https://docs.rs/awesome-glib"
homepage = "https://github.com/andy128k/awesome-gtk/"
repository = "https://github.com/andy128k/awesome-gtk/"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.14"

[lib]
proc-macro = true

[dev-dependencies]
glib = "0.17"
gio = "0.17"
